# compiler

./: .gitignore  CHANGELOG.md  FLEX_BISON_INTEGRATION.md  GUIDE_EXECUTION.md  GUI_README.md  INTEGRATION_RESUME.md  README.md  launch_gui.bat  launch_gui.ps1  launch_gui_quiet.bat  launch_gui_quiet.ps1  pyproject.toml  requirements.txt  run.bat  run.ps1  test_ply_integration.py
assets/icons/: README.md
flex_bison_native/: Makefile  README.md  lexer.l  parser.y
src/: __init__.py  about_dialog.py  ast.py  errors.py  evaluator.py  graphviz_exporter.py  graphviz_widget.py  gui.py  lexer_ply.py  optimizer.py  parser.py  parser_ply.py  pretty.py  repl.py  style.qss  syntax_highlighter.py  tokenizer.py  visitors.py
tests/: test_evaluator.py  test_gui.py  test_json.py  test_optimizer.py  test_parser.py  test_pretty.py  test_tokenizer.py
